--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <script src="dist/bundle.js"></script>
+    <script src="public/bundle.js"></script>
 </body>
 
 </html>
