--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="./base.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js"></script>
     <title>doogma test</title>
 </head>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <script src="public/bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 
 </html>
